# ctrlf-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  HWP_SOLUTION_ANALYSIS.md  HWP_TEST_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  PROJECT_REPORT.md  PR_TEMPLATE.md  QWEN3_SETUP.md  README.md  STREAMLIT_UI.md  TESTING.md  chat_cli.py  conftest.py  docker-compose.ci.yml  docker-compose.yml  generated_script.json  main.py  prompt1.txt  pyproject.toml  pytest.ini  qa_batch_test.py  requirements.txt  test.docx  test_backend_script_api.py  test_chat.json  test_hwp_converter.py  test_script_video.py  사규.docx
app/: __init__.py  main.py
core/: __init__.py  chunker.py  cleaner.py  embedder.py  evaluator.py  hwp_converter.py  llm.py  models.py  monitoring.py  ocr.py  parser.py  pipeline.py  report_store.py  structure.py  vector_store.py
docs/: API_INVENTORY.md  API_REFERENCE.md  API_SPECIFICATION_FOR_BACKEND.md  API_SPEC_RAG_PROCESS.md  BACKEND_INTEGRATION_GUIDE.md  BACKEND_SEARCH_API_GUIDE.md  CHAT_PIPELINE_ARCHITECTURE.md  CI_INTEGRATION_SETUP.md  DEBUG_RAG.md  DEVELOPMENT_REPORT.md  DEVELOPMENT_REPORT_PHASE10.md  DEVELOPMENT_REPORT_PHASE12.md  DEVELOPMENT_REPORT_PHASE13.md  DEVELOPMENT_REPORT_PHASE14.md  DEVELOPMENT_REPORT_PHASE16.md  DEVELOPMENT_REPORT_PHASE22.md  DEVELOPMENT_REPORT_PHASE23.md  DEVELOPMENT_REPORT_PHASE26.md  DEVELOPMENT_REPORT_PHASE28.md  DEVELOPMENT_REPORT_PHASE29.md  DEVELOPMENT_REPORT_PHASE31.md  DEVELOPMENT_REPORT_PHASE33.md  DEVELOPMENT_REPORT_PHASE34.md  DEVELOPMENT_REPORT_PHASE37.md  DEVELOPMENT_REPORT_PHASE3_1.md  DEVELOPMENT_REPORT_PHASE3_2.md  DEVELOPMENT_REPORT_PHASE41.md  DEVELOPMENT_REPORT_PHASE42.md  (+31 more)
(+440 files in other folders)
